css/botan.css
@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Patrick+Hand&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Zilla+Slab+Highlight:wght@400;700&display=swap');

/* Force dark theme & New colors */
:root,
.site-theme-dark,
.site-theme-contrast {
    --color-background: 39, 39, 39;
    --color-foreground: 38, 34, 34;
    --color-foreground-grey: 31, 31, 31;
    --color-foreground-grey-dark: 6, 12, 19;
    --color-foreground-blue: 15, 22, 31;
    --color-foreground-blue-dark: 6, 12, 19;
    --color-text: 159, 173, 189;
    --color-text-light: 114, 138, 161;
    --color-text-lighter: 133, 150, 165;
    --color-shadow-blue: 0, 5, 15;
    --color-background-1200: 251, 251, 251;
    --color-background-1100: 240, 243, 246;
    --color-background-1000: 221, 230, 238;
    --color-background-900: 201, 215, 227;
    --color-background-800: 173, 192, 210;
    --color-background-700: 139, 160, 178;
    --color-background-600: 116, 136, 153;
    --color-background-500: 100, 115, 128;
    --color-background-400: 81, 97, 112;
    --color-background-300: 30, 42, 56;
    --color-background-100: 26, 26, 26;
    --color-background-200: 39, 39, 39;
    --color-gray-1200: 251, 251, 251;
    --color-gray-1100: 240, 243, 246;
    --color-gray-1000: 221, 230, 238;
    --color-gray-900: 201, 215, 227;
    --color-gray-800: 173, 192, 210;
    --color-gray-700: 139, 160, 178;
    --color-gray-600: 116, 136, 153;
    --color-gray-500: 100, 115, 128;
    --color-gray-400: 81, 97, 112;
    --color-gray-300: 30, 42, 56;
    --color-gray-100: 21, 31, 46;
    --color-gray-200: 11, 22, 34;

    --kex-text: 255, 255, 255;
    --kex-text-light: 155, 166, 175;

    --color-text: var(--kex-text);
    --color-text-light: var(--kex-text);
}

/* Colors */
:root,
.user-page-unscoped.orange,
.site-theme-dark .user-page-unscoped.orange,
.site-theme-contrast .user-page-unscoped.orange {
    --color-blue: 156, 156, 156;
}

/* Scrollbar */
*::-webkit-scrollbar {
    width: 0.5em;
}

*::-webkit-scrollbar-thumb {
    background: linear-gradient(0deg, rgba(74, 69, 69, 0.4), rgba(88, 80, 80, 0.4));
    outline: 1px solid rgb(136, 93, 0);
    border-radius: 10px;
}

/* Fonts */
@font-face {
    font-family: 'Felt';
    src: url('https://kex1016.github.io/fonts/FeltRegular.woff2') format('woff2'),
        url('https://kex1016.github.io/fonts/FeltRegular.woff') format('woff');
    font-weight: 100;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'augie';
    src: url('https://kex1016.github.io/fonts/Augie.woff2') format('woff2'),
        url('https://kex1016.github.io/fonts/Augie.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Manga Temple';
    src: url('https://kex1016.github.io/fonts/MangaTemple.woff2') format('woff2'),
        url('https://kex1016.github.io/fonts/MangaTemple.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Manga Temple';
    src: url('https://kex1016.github.io/fonts/MangaTempleBold.woff2') format('woff2'),
        url('https://kex1016.github.io/fonts/MangaTempleBold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Wild Words';
    src: url('https://kex1016.github.io/fonts/WildWordsBoldItalic.woff2') format('woff2'),
        url('https://kex1016.github.io/fonts/WildWordsBoldItalic.woff') format('woff');
    font-weight: bold;
    font-style: italic;
    font-display: swap;
}

@font-face {
    font-family: 'Wild Words';
    src: url('https://kex1016.github.io/fonts/WildWordsItalic.woff2') format('woff2'),
        url('https://kex1016.github.io/fonts/WildWordsItalic.woff') format('woff');
    font-weight: normal;
    font-style: italic;
    font-display: swap;
}

@font-face {
    font-family: 'Manga Temple';
    src: url('https://kex1016.github.io/fonts/MangaTempleItalic.woff2') format('woff2'),
        url('https://kex1016.github.io/fonts/MangaTempleItalic.woff') format('woff');
    font-weight: normal;
    font-style: italic;
    font-display: swap;
}

@font-face {
    font-family: 'Wild Words';
    src: url('https://kex1016.github.io/fonts/WildWordsRoman.woff2') format('woff2'),
        url('https://kex1016.github.io/fonts/WildWordsRoman.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Wild Words';
    src: url('https://kex1016.github.io/fonts/WildWordsBold-Bold.woff2') format('woff2'),
        url('https://kex1016.github.io/fonts/WildWordsBold-Bold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

/* banner */
.banner[data-v-5445dac8] {
    background-image: url('https://files.weebsquad.moe/VWia28lj.png') !important;
}

/* footer */
.footer[data-v-82d0a8cc] {
    background: rgb(var(--color-foreground));
}

/* After my username */
.name[data-v-5445dac8]::after {
    content: "Hi!";
    font-family: 'Wild Words';
    position: relative;
    left: 10px;
    top: -1px;
    background-color: transparent;
    background-image: url('https://files.weebsquad.moe/rrKgCAVK.png');
    background-size: 100%;
    background-position: center;
    background-repeat: no-repeat;
    border-radius: 4px;
    color: rgb(0, 0, 0);
    padding: 5px 8px;
    margin-bottom: 20px;
    margin-right: 16px;
    font-size: 1.2rem;
}
/* ... */

